pywbem-0.7  YYYY-MM-DD

pywbem-0.6  2007-10-26

  LICENSING:
 
    * Relicensed from the GNU GPL to the GNU LGPL.

  API CHANGES:

    * Add a type keyword arg and attribute to CIMQualifier, similar to
      the CIMProperty object, to allow the creation of null qualifiers.
      (Tim Potter) 

    * Remove the toxml() method from CIM object classes.  Use
      tocimxml().toxml() instead which specifies the CIM-XML
      representation of the object. (Tim Potter)

    * CIMDateTime class should now be used instead of datetime.datetime 
      and datetime.timedelta. 

    * Added a new method, CIMInstance.update_existing().  This behaves 
      like update() on a dict, but only assigns new values to existing
      properties.  It skips values for properties not already present
      in the instance.  This is useful for honoring PropertyList within
      python providers. 

  BUG FIXES:

    * Explicitly specify charset="utf-8" in HTTP Content-type header
      as this is required now by the Pegasus cimserver.  (Tim Potter)

    * Parse VALUETYPE elements that contain a TYPE attribute.  This
      feature was introduced in version 2.2 of the CIM-XML DTD and
      produced by some CIMOMs such as the Java WBEM Server.  (Tim Potter)

    * Don't require CreateInstance to have the path attribute set but
      if it is, use the namespace from it.  (Tim Potter)

    * Allow extrinsic methods to return object references.  (Tim Potter)

    * Fix CIMInstanceName to support more numeric types of keybindings.
      (Bart Whiteley)

    * Fix datetime values to support utc offset. (Bart Whiteley)

    * Fix http client to monitor the connection more closely (RFC 2616
      section 8.2.2).  Previously, a large request could cause a socket
      exception with no ability to read the response and respond to 
      an authentication challenge. 

    * Fix NULL qualifiers to have a (required) type. (Martin Mrazik)

    * Fix initialising CIMInstanceName keys from a NocaseDict. (Bart